Fix reviews overflow mobile

--- a/apps/main/static/main/css/style.css
+++ b/apps/main/static/main/css/style.css
@@ -61,7 +61,7 @@
 .reviews-container {
   display: flex;
   width: 100vw;
-  overflow: visible;
+  overflow: hidden;
   position: relative;
   gap: 2em;
   /* Optional: Adds some space between the boxes */
